--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,11 +22,20 @@ android {
 
 
 
+
+
+
+
+
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    compile 'com.android.support:design:25.2.0'
+    compile 'com.android.support:design:25.2.0'
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:recyclerview-v7:25.2.0'
     compile 'com.android.support:cardview-v7:25.2.0'
@@ -35,17 +44,18 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:10.2.0'
     compile 'com.google.android.gms:play-services-location:10.2.0'
     compile 'com.google.android.gms:play-services-places:10.2.0'
-    compile 'com.android.support:design:25.2.0'
+    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'net.danlew:android.joda:2.9.9'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'com.squareup.okhttp3:okhttp:3.0.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
     compile 'net.rimoto:intlphoneinput:1.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:25.2.0'
     compile 'com.jakewharton:butterknife:6.1.0'
-    compile "io.realm:realm-android-library:3.5.0"
-    compile "io.realm:realm-annotations:3.5.0"
-
+    compile 'io.realm:realm-android-library:3.5.0'
+    compile 'io.realm:realm-annotations:3.5.0'
     testCompile 'junit:junit:4.12'
 }
